@@ -1,5 +1,7 @@
 #VERSION 0.9.5#
   
+ - fixed method addAction() in Peak_Codegen_Controller to discard empty action name
+ - changed the path of internal module in Peak_Application_Modules
  - added bind param to method query() in Peak_Model_Zendatable
  - added a new param method to model() from Peak_Controller_Action to allow injection of param(s) into the model constructor
  - added better zend_db profiler infos in Peak_View_Helper_Debugbar + minor css change in debugbar.css
